👍 shotarokataoka.github.io_sideF

--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        repository: RibbonCMS/SimpleBlogTemplate
+        repository: ShotaroKataoka/ShotaroKataoka.github.io_sideF
         path: front
         ref: main
 
