--- a/settings.conf
+++ b/settings.conf
@@ -1,5 +1,5 @@
 #!/bin/bash
 GITHUB_USER_NAME='ShotaroKataoka'
 GITHUB_USER_EMAIL='s183347@stn.nagaokaut.ac.jp'
-FRONTEND_REPOSITORY='RibbonCMS/SimpleBlogTemplate'
+FRONTEND_REPOSITORY='ShotaroKataoka/ShotaroKataoka.github.io_sideF'
 SIDE_M_REPOSITORY='RibbonCMS/RibbonCMS_sideM'
