--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -39,7 +39,9 @@ jobs:
       with:
         python-version: '3.9'
         cache: 'pip'
-    - run: |
+
+    - name: pip install
+      run: |
         cd side_m
         pip install -r requirements.txt
 
@@ -75,7 +77,7 @@ jobs:
 
     # FRONTEND BUILD
     - name: Setup Node.js
-    - uses: actions/setup-node@v3
+      uses: actions/setup-node@v3
       with:
         node-version: 16.x.x
         cache: 'npm'
