--- a/front_contents/contents/etc/config.json
+++ b/front_contents/contents/etc/config.json
@@ -1,6 +1,6 @@
 {
     "blog_title": "かたおかの雑談配信",
-    "site_introduction": "かたおかのブログです。主に趣味関係をだらだら書いていきます。",
+    "site_introduction": "かたおかのブログです。主に趣味関係をだらだら書いていきます。日本文化が好きです。",
     "copylight_name": "ShotaroKataoka",
     "copylight_url": "https://github.com/ShotaroKataoka",
     "issues_page_url": "https://github.com/ShotaroKataoka/ShotaroKataoka.github.io/issues",
