--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -56,17 +56,16 @@ jobs:
         . ./.venv/bin/activate
         pip install -r requirements.txt
 
-    - name: Activate venv
-      run: . side_m/.venv/bin/activate
-
     - name: Check Publish flag
       run: |
         cd side_m
+        . ./.venv/bin/activate
         python3 check.py
 
     - name: build markdown
       run: |
         cd side_m
+        . ./.venv/bin/activate
         python3 closed.py
 
     - name: Commit & Push
