--- a/templates/workflows/issue_builder.yml
+++ b/templates/workflows/issue_builder.yml
@@ -9,6 +9,11 @@ jobs:
     if: containes( github.event.issue.labels, '"name": "authed"' )
     runs-on: ubuntu-latest
     steps: 
+
+    - name: aaa
+      run: |
+        echo ${containes( github.event.issue.labels, '"name": "authed"' )}
+
     - uses: actions/checkout@v2
 
     # ISSUE BUILD
