--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -6,8 +6,14 @@ on:
 
 jobs:
   build_md:
+    if: containes( github.event.issue.labels, '"name": "authed"' )
     runs-on: ubuntu-latest
     steps: 
+
+    - name: aaa
+      run: |
+        echo ${containes( github.event.issue.labels, '"name": "authed"' )}
+
     - uses: actions/checkout@v2
 
     # ISSUE BUILD
