--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -12,8 +12,8 @@ jobs:
 
     - name: aaa
       run: |
-        echo ${{ toJson(github.event.issue.labels) }}
-        echo ${contains( $(echo ${toJson(github.event.issue.labels)}), '"name": "authed"' )}
+        echo "${{ toJson(github.event.issue.labels) }}"
+        echo ${contains( $(echo "${toJson(github.event.issue.labels)}"), '"name": "authed"' )}
 
     - uses: actions/checkout@v2
 
