--- a/templates/workflows/issue_builder.yml
+++ b/templates/workflows/issue_builder.yml
@@ -6,14 +6,16 @@ on:
 
 jobs:
   build_md:
+    env:
+      JOB_LABELS: ${{ toJson(github.event.issue.labels) }}
     if: contains( 'aa', 'aa' )
     runs-on: ubuntu-latest
     steps: 
 
     - name: aaa
       run: |
-        echo "${{ toJson(github.event.issue.labels) }}"
-        echo ${contains( '${{ toJson(github.event.issue.labels) }}', '"name": "authed"' )}
+        echo "${JOB_LABELS}"
+        echo "${contains( ${JOB_LABELS}, 'aa' )}"
 
     - uses: actions/checkout@v2
 
