--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build_md:
-    if: contains( ${{ toJson(github.event.issue.labels) }}, 'aa' )
+    if: contains( ${{ toJson(github.event.issue.labels) }}, '"name": "article"' )
     runs-on: ubuntu-latest
     steps: 
     - uses: actions/checkout@v2
