--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build_md:
-    if: contains( ${{ github.event.issue.labels }}, 'authed' )
+    if: contains( ${{ fromJson(github.event.issue.labels) }}, 'authed' )
     runs-on: ubuntu-latest
     steps: 
     - uses: actions/checkout@v2
