--- a/templates/workflows/issue_builder2.yml
+++ b/templates/workflows/issue_builder2.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
 
-    run: |
-      echo "${{ github.event }}"
+    - name: aaa
+      run: |
+        echo "${{ github.event }}"
 
