💚 workflow cache .next/cache

--- a/.github/workflows/issue_builder.yml
+++ b/.github/workflows/issue_builder.yml
@@ -96,13 +96,14 @@ jobs:
         node-version: 16.x.x
 
     - uses: actions/cache@v3
-      id: node_modules_cache_id
-      env:
-        cache-name: cache-node-modules
+      id: Next.js Cache
       with:
-        path: 'front/src/node_modules'
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('front/src/package-lock.json') }}
-
+        path: |
+          'front/src/node_modules'
+          'front/src/.next/cache'
+        key: ${{ runner.os }}-nextjs-${{ hashFiles('front/src/package-lock.json') }}-${{ hashFiles('front/src/**/*.js') }}
+        restore-keys: |
+          ${{ runner.os }}-nextjs-${{ hashFiles('front/src/package-lock.json') }}-
     - name: Install NPM packages
       if: ${{ steps.node_modules_cache_id.outputs.cache-hit != 'true' }}
       run: npm ci
