--- a/front_contents/contents/etc/config.json
+++ b/front_contents/contents/etc/config.json
@@ -1,12 +1,12 @@
 {
-    "blog_title": "かたおかの雑談配信",
-    "site_introduction": "かたおかのブログです。主に趣味関係をだらだら書いていきます。日本文化が好きです。",
+    "blog_title": "かたおかの活動記録",
+    "site_introduction": "かたおかの個人ブログです。やったこと、メモなど備忘録的に残しています。ほぼ日記みたいなものです。",
     "copylight_name": "ShotaroKataoka",
     "copylight_url": "https://github.com/ShotaroKataoka",
     "issues_page_url": "https://github.com/ShotaroKataoka/ShotaroKataoka.github.io/issues",
     "favicon_image_url": "https://user-images.githubusercontent.com/42331656/175220729-c255f8b0-e709-4efc-a8e6-dc2e29a92c35.png",
     "author_name": "かたおか",
-    "author_introduction": "かたおかです。アイコンはみかん。",
+    "author_introduction": "かたおかです。\nアイコンはみかん。",
     "avatar_image_url": {
         "url": "https://user-images.githubusercontent.com/42331656/175183205-06dc6033-af20-44b9-ae3d-c3e68770a1f3.png",
         "path": "/static/images/config/avatar.webp"
