Issue build: update front_contents

--- a/front_contents/contents/etc/config.json
+++ b/front_contents/contents/etc/config.json
@@ -1,5 +1,5 @@
 {
-    "blog_title": "かたおかの活動記録",
+    "blog_title": "ShotaroKataoka.github.io",
     "site_introduction": "かたおかの個人ブログです。やったこと、メモなど備忘録的に残しています。ほぼ日記みたいなものです。",
     "copylight_name": "ShotaroKataoka",
     "copylight_url": "https://github.com/ShotaroKataoka",
